overflow issue

--- a/sass/variables/_general.scss
+++ b/sass/variables/_general.scss
@@ -10,6 +10,7 @@ body {
   --primary-color: #ED4A44;
   --color-black: #272727;
   background-color: var(--primary-color);
+  overflow-x: hidden;
   font-family: 'Lato', sans-serif;
   color: var(--color-black);
   transition: 1s;
@@ -294,7 +295,7 @@ body.active .cards:not(.cards--simple-borders) .cards__card {
         display: none;
       }
 
-      @media (max-height: 958px) {
+      @media (max-height: 750px) {
        height: 100%;
       }
     }
